--- a/curso/pubspec.yaml
+++ b/curso/pubspec.yaml
@@ -57,6 +57,9 @@ dependencies:
   uuid: ^4.2.1
   connectivity_plus: ^6.1.4  # ← ACTUALIZADA según el error
 
+  # WebSocket para notificaciones en tiempo real
+  web_socket_channel: ^2.4.0
+
 dev_dependencies:
   build_runner: ^2.4.6
   riverpod_generator: ^2.2.5
